[project]
name = "simpletunerflux2"
description = "ComfyUI nodes for using SimpleTuner-trained Flux 2 LoRA models. SimpleTuner's Flux 2 architecture uses fused layers, making its LoRAs incompatible with standard ComfyUI Flux nodes. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-SimpleTunerFlux2 requirements", "# These are the core dependencies needed for SimpleTuner's Flux 2 pipeline", "torch>=2.0.0", "transformers>=4.38.0", "diffusers>=0.28.0", "safetensors>=0.4.0", "peft>=0.10.0", "accelerate>=0.27.0", "pillow>=9.0.0", "numpy>=1.24.0", "hf_transfer", "py3langid", "ftfy"]

[project.urls]
Repository = "https://github.com/flowers6421/ComfyUI-SimpleTunerFlux2"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/flowers6421/ComfyUI-SimpleTunerFlux2/wiki"
"Bug Tracker" = "https://github.com/flowers6421/ComfyUI-SimpleTunerFlux2/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SimpleTunerFlux2"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

